2000-08-25  Brent Welch <welch@scriptics.com>

	* lib/imagemap.tcl: Fixed typo inexpression in imagemap.tcl
	* lib/auth.tcl: fixed funny call to Log in the error case.
	* Nudged up the tclhttpd-3-1-0 CVS tag.

2000-08-23  Brent Welch <welch@scriptics.com>

	* Makefile.in: Fixed install permission bits on files.
	* bin/httpd.tcl: Fixed setuid emulation under Tclx to setgid
	before setuid.
	* lib/url.tcl: Added support for raising an error with errorCode
	set to HTTPD_SUSPEND in order to suspend a request - this calls
	the Httpd_Suspend funciton.
	* certs/README.ssl:  Added documentation about creating self-signed
	certificates.
	* lib/version.tcl: Tweaked date stamp in version
	* bin/httpdthread.tcl: Added package require httpd::version to
	fix htdocs/templates/index.tml example
	* Applied tclhttpd-3-1-0 CVS tag.

2000-08-02  Brent Welch <welch@scriptics.com>

	* Upped the version number to 3.1
	 Changed the name of every "package" to have a leading "httpd::" to
	distingquish it as belonging to TclHttpd.
	* configure:
	* htdocs/access/index.tml:
	* htdocs/templates/faqfaq.tml: (Contributed by Colin McCormack)
	* htdocs_2/index.tml:
	* lib/passcheck.tcl: (Contributed by Cezar Totth)
	* lib/prodebug.tcl:
	 Added a few stray files that were missing from CVS


2000-07-26  Brent Welch <welch@scriptics.com>

	* lib/cgi.tcl - Fixed use of "2> /dev/stdout", which can
	fail if you start tclhttpd under an xterm (which is a fine
	/dev/stdout), but later exit the xterm.  Previously that
	broke all CGI scripts.  The open error is now trapped, and
	it falls back to the old "|& cat" way of doing things.
	[BUG 5870]

2000-07-24  Brent Welch <welch@scriptics.com>

	* lib/httpd.tcl - Fixed case where a normal post happens to
	start with a leading newline for valid reasons as opposed to
	being the extra newline from SSL on Netscape.

2000-07-18  Brent Welch <welch@scriptics.com>

	* lib/httpd.tcl - Fixed cleanup call to Httpd_GetPostDataAsync