@@ -2,6 +2,9 @@
 [html::keywords ]
 [html::author "Colin McCormack"]
 [mypage::header "tclhttpd FAQ generator FAQ"]
+
+<!-- These are the return values from the various FAQ calls:
+
 [FAQinit "tclhttpd FAQ FAQ"]
 [FAQsection "General Questions"]
 [FAQ "What is it?" "The FAQ package allows you to present FAQs with minimal 
@@ -23,7 +26,7 @@ Index, it'll generate internal html references to sections and questions,
 it'll handle the numbering, and it'll let you generate links to each of these 
 indexable elements."]
 
-[FAQ "Wouldn't this format be terribly easy to generate from a text file?" 
+[FAQ "Wouldn't this format be terribly easy to generate from a text file?"  \
 "Yes, it would.  And the text file could be generated from forms.  It'd be a 
 very nice, simple FAQomatic."]
 
@@ -40,6 +43,9 @@ under the heading?" "I've no idea."]
 structure"]
 [FAQ "How long did this take you to write this FAQ?" "Something under 5 
 minutes."]
+
+Just before FAQgen -->
+
 [FAQgen]
 
 [mypage::footer]
