@@ -1,7 +1,10 @@
 2000-08-25  Brent Welch <welch@scriptics.com>
 
 	* lib/imagemap.tcl: Fixed typo inexpression in imagemap.tcl
+	* lib/maptcl.tcl: Fixed MapRead to handle spaces in map filenames.
+	* lib/maptk.tcl: Fixed MapRead to handle spaces in map filenames.
 	* lib/auth.tcl: fixed funny call to Log in the error case.
+	* htdocs/templates/faqfaq.tml: Added missing \ in .tml Tcl code
 	* Nudged up the tclhttpd-3-1-0 CVS tag.
 
 2000-08-23  Brent Welch <welch@scriptics.com>
